--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
         "lib-openssl" : "*"
     },
 
+    "require-dev" : {
+        "phpunit/phpunit": "4.1.*"
+    },
+
     "autoload" : {
         "psr-4" : {
             "DCarbone\\CurlPlus\\" : "src/"
