Working towards 2.0 release:
- Adding helper class DCarbone\CurlPlus\CURL
- Updating interface names
- Deprecating use of "getResponse" in favor of "getResponseBody" as it is a better representation of what you're getting.
- Implementing __toString() on Response class, which by default returns the Response Body
- Adding Copyright info to each file.
- Adding "$asArray" parameter to getRequestHeaders and getResponseHeaders methods that will return an associative array of the respective headers.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,15 +12,13 @@
         syntaxCheck="true"
         >
 
-    <testsuite name="CurlOptHelper">
-        <directory>./tests/CurlOptHelper</directory>
-        <exclude>./tests/misc</exclude>
-    </testsuite>
-
-    <testsuite name="CurlPlus">
-        <directory>./tests/CurlPlus</directory>
-        <exclude>./tests/misc</exclude>
-    </testsuite>
+    <testsuites>
+        <testsuite name="allthetests">
+            <file>tests/CurlPlusClientTest.php</file>
+            <file>tests/CurlOptHelperTest.php</file>
+            <file>tests/CURLTest.php</file>
+        </testsuite>
+    </testsuites>
 
     <filter>
         <whitelist addUncoveredFilesFromWhitelist="true">
