--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
 
     "require-dev" : {
-        "phpunit/phpunit": "4.1.*"
+        "phpunit/phpunit": "~4.1"
     },
 
     "autoload" : {
