Working towards 2.0 release:
- Moving default CURL helper params to private class-level vars
- Abstracting execution commands to single method in CURL helper
- Some more tests

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "curl"
     ],
     "homepage": "https://github.com/dcarbone/curl-plus",
-    "license": "MIT",
+    "license": "GPL-2.0",
 
     "authors" : [
         {
@@ -23,7 +23,8 @@
     },
 
     "require-dev" : {
-        "phpunit/phpunit": "~4.1"
+        "phpunit/phpunit": "~4.1",
+        "lib-openssl": "*"
     },
 
     "autoload" : {
