Working towards 2.0 release:
- CURL helper now accepts string, object, or array request body values
- Updating documentation a wee bit.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,7 @@
             <file>tests/CurlPlusClientTest.php</file>
             <file>tests/CurlOptHelperTest.php</file>
             <file>tests/CURLTest.php</file>
+            <exclude>tests/inc</exclude>
         </testsuite>
     </testsuites>
 
