Migrating from GPL 2.0 -> Apache 2.0

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "curl"
     ],
     "homepage": "https://github.com/dcarbone/curl-plus",
-    "license": "GPL-2.0",
+    "license": "Apache-2.0",
 
     "authors" : [
         {
