--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,12 @@ language: php
 sudo: false
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
 
 before_script:
-  - composer self-update 1.0.0-alpha11
+  - composer self-update 1.2.0
   - composer install --no-interaction --prefer-source
 
 script:
