--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,12 @@
     },
 
     "require" : {
-        "php" : ">=5.4.0",
-        "lib-curl" : "*",
+        "php" : ">=8.0",
+        "ext-curl" : "*",
         "dcarbone/curl-header-extractor": "2.0.*"
     },
 
     "require-dev" : {
-        "phpunit/phpunit": "~4.1",
-        "lib-openssl": "*"
+        "phpunit/phpunit": "^8.0 || ^9.0"
     }
 }
