--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
             "DCarbone\\CurlPlus\\" : "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "DCarbone\\CurlPlus\\Tests\\": "tests/"
+        }
+    },
 
     "require" : {
         "php" : ">=8.0",
